--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 				<a href="#first" id="top-link" class="scrolly menuBorder">Tracks</a>
 				<!--<a href="#second" id="example-link" class="scrolly menuBorder">Datas</a>
 				<a href="#third" id="setup-link" class="scrolly menuBorder">Prémios</a>-->
-				<a href="#third" id="usage-link" class="scrolly"">Inscrição</a>
-				<!--<a href="./regulamento.pdf" target="_blank"> Regulamento</a>-->
+				<a href="#third" id="usage-link" class="scrolly menuBorder">Inscrição</a>
+				<a href="./regulamento.pdf" target="_blank"> Regulamento</a>
 			</nav>
 		</div>
 
@@ -81,7 +81,7 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<p>Irá premiar os melhores e mais inovadores projectos nas áreas dos Entertainment, Lifestyle, Social, bem como os participantes que revelem mais competências na área da Business.</p>
+						<p>Irá premiar os melhores e mais inovadores projectos nas áreas dos Videogames, Lifestyle, Social, bem como os participantes que revelem mais competências na área da Business.</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -89,25 +89,25 @@
 						<div class="row">
 							<div class="3u">
 								<section>
-									<span class="feature-icon"><div><img src="./images/entertainmentt.png"></span></div></span>
+									<span class="feature-icon"><div><img src="./images/v.png"></span></div></span>
 									<header>
-										<h3>Entertainment</h3>
+										<h3>Videogames</h3>
 									</header>
-									<p>Projectos que tenham como principal objectivo divertir ou entreter os utilizadores. As aplicações poderão ir desde jogos, visualização de vídeos, edição de imagem e vídeo, até à leitura de livros ou manipulação de voz.</p>
+									<p>As equipas deverão criar um jogo inovador e original. Procuramos um jogo que tenha um bom design, uma boa inteligência artificial, boa fluidez e, claro, que seja uma boa fonte de entretenimento.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section>
-									<span class="feature-icon"><div><img src="./images/lifestyle.png"></span></div></span>
+									<span class="feature-icon"><div><img src="./images/l.png"></span></div></span>
 									<header>
 										<h3>Lifestyle</h3>
 									</header>
-									<p>Nesta categoria irão inserir-se os projectos que impactem no dia-a-dia das pessoas poderá conter os mais variados tópicos desde moda até a ajuda personalizada de acordo com informações obtidas regularmente, como por exemplo, a localização do utilizador.</p>
+									<p>Nesta categoria irão inserir-se os projectos que impactem no dia-a-dia das pessoas poderá conter os mais variados tópicos desde moda até a ajuda personalizada de acordo com informações obtidas regularmente, como por exemplo, a localização do utilizador ou qualquer outro tipo de projecto com carácter de entretenimento.</p>
 								</section>
 							</div>
 							<div class="3u">
 								<section>
-									<span class="feature-icon"><div><img src="./images/social.png"></span></div></span>
+									<span class="feature-icon"><div><img src="./images/s.png"></span></div></span>
 									<header>
 										<h3>Social</h3>
 									</header>
@@ -116,7 +116,7 @@
 							</div>
 							<div class="3u">
 								<section>
-									<span class="feature-icon"><div><img src="./images/business.png"></span></div></span>
+									<span class="feature-icon"><div><img src="./images/b.png"></span></div></span>
 									<header>
 										<h3>Business</h3>
 									</header>
