--- a/index.html
+++ b/index.html
@@ -173,35 +173,30 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Inscrições brevemente!</h2>
-						<!--<h2>O que é que eu ganho?</h2>
-						<p>Fama, glória, experiência e reconhecimento!</p>-->
+						<h2>O que é que eu ganho?</h2>
+						<p>Fama, glória, experiência e reconhecimento!</p>
 					</div>
 				</header>
-				<!--<div class="content dark style3" style="text-align:center;">
-					<div class="row">
-						<div class="12u">
-							<h3>Inscrição brevemente!</h3>
-						</div>
-					</div>
-					<!--<div class="container">
+				<div class="content dark style3">
+					<div class="container">
 						<div class="row">
-							<div class="12u">
+							<div class="12u" style="text-align:center;">
 								<h3>Ah claro, e os seguintes prémios:</h3>
 							</div>
 						</div>
 						<div class="row">
 							<div class="2u" style="text-align:center;">
 								<section>
-									<span class="fa fa-lock" style="font-size:72px"></span>
+									<div><img src="./images/v.png" style="margin-top:30px"></span></div>
 								</section>
 							</div>
 							<div class="10u">
 								<section>
 									<header>
-										<h3>Para a competição de Segurança, o primeiro prémio é:</h3>
+										<h3>Para a competição de Videogames, os primeiros prémios são:</h3>
 									</header>
-									<p>Uma viagem à <a href="http://www.defcon.org/">DEF CON</a> nos Estados Unidos. Entrada, estadia e viagem totalmente pagas!!!</p>
+									<p>Uma viagem à <a href="http://www.e3expo.com/">E3</a> com entrada de produtor!</p>
+									<p>Uma fantástica Xbox One e Kinect 2!</p>
 								</section>
 							</div>
 						</div>
@@ -209,17 +204,15 @@
 						<div class="row">
 							<div class="2u" style="text-align:center;">
 								<section>
-									<span class="fa fa-gamepad" style="font-size:72px"></span>
+									<div><img src="./images/l.png"></span></div>
 								</section>
 							</div>
 							<div class="10u">
 								<section>
 									<header>
-										<h3>Para a competição de Jogos, os primeiros prémios são:</h3>
+										<h3>Para a competição de Lifestyle, os primeiros prémios são:</h3>
 									</header>
-									<p>Uma consola de última geração à escolha para cada elemento da equipa vencedora! <br>
-									PS4, Xbox One ou Wii U - A que cada um preferir!</p>
-									<p>Receberão também uma Beta Key Project Spark cada um!</p>
+									<p>Até 4 tablets*</p>
 								</section>
 							</div>
 						</div>
@@ -227,15 +220,15 @@
 						<div class="row">
 							<div class="2u" style="text-align:center;">
 								<section>
-									<span class="fa fa-bolt" style="font-size:72px"></span>
+									<div><img src="./images/s.png"></span></div>
 								</section>
 							</div>
 							<div class="10u">
 								<section>
 									<header>
-										<h3>Para a competição de Electrónica, os prémios são:</h3>
+										<h3>Para a competição de Social, os prémios são:</h3>
 									</header>
-									<p>Os elementos da equipa vencedora desta track ganham um Parrot AR Drone 2.0 Power Edition cada um!</p>
+									<p>Até 4 telemóveis*</p>
 								</section>
 							</div>
 						</div>
@@ -243,20 +236,20 @@
 						<div class="row">
 							<div class="2u" style="text-align:center;">
 								<section>
-									<span class="fa fa-mobile" style="font-size:72px"></span>
+									<div><img src="./images/b.png"></span></div>
 								</section>
 							</div>
 							<div class="10u">
 								<section>
 									<header>
-										<h3>Para a competição de Mobile, os prémios são:</h3>
+										<h3>Para a competição de Business, os prémios são:</h3>
 									</header>
-									<p>Os elementos da equipa vencedora da track de Mobile receberão cada um, um Nokia Lumia! </p>
-
-									<p>Mas não nos ficamos por aqui! A equipa vencedora irá, com tudo pago, à Campus Party Europe 2014! E como se não bastasse, os elementos vencedores estarão imediatamente sujeitos a uma proposta de estágio ou Mentoring na Faber Ventures!</p>
+									<p>2000€ para a equipa vencedora!</p>
 								</section>
 							</div>
-						</div>-->
+						</div>
+
+						<span style="line-height:100px; margin-bottom:0px;">(*) O número de gadgets atribuídos é de uma unidade por elemento do grupo, sendo o máximo de quatro por equipa</span>
 
 						<!--<div class="row">
 							<div class="2u" style="text-align:center;">
@@ -282,6 +275,13 @@
 						</div>-->
 					</div>
 				</div>
+				<header>
+					<div class="container">
+						<h2>Inscrições brevemente!</h2>
+						<!--<h2>O que é que eu ganho?</h2>
+						<p>Fama, glória, experiência e reconhecimento!</p>-->
+					</div>
+				</header>
 			</section>
 		<!-- Fourth -->
 		<!--
