--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<head>
 		<title>Innovation Awards</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta property="og:description" name="description" content="O Innovation Awards é um concurso anual organizado pela SINFO e pelas JEEC, que tem como objectivo incentivar e estimular a criatividade, empreendedorismo e espírito inovador dos estudantes universitários." />
+		<meta property="og:description" name="description" content="O Innovation Awards é um concurso anual organizado pela SINFO, que tem como objectivo incentivar e estimular a criatividade, empreendedorismo e espírito inovador dos estudantes universitários." />
 		<meta name="keywords" content="contest" />
 		<meta property="og:title" content="Innovation Awards" />
 		<meta property="og:url" content="http://innovation.awards.pt" />
@@ -102,7 +102,7 @@
 									<header>
 										<h3>Lifestyle</h3>
 									</header>
-									<p>Nesta categoria irão inserir-se os projectos que impactem no dia-a-dia das pessoas poderá conter os mais variados tópicos desde moda até a ajuda personalizada de acordo com informações obtidas regularmente, como por exemplo, a localização do utilizador ou qualquer outro tipo de projecto com carácter de entretenimento.</p>
+									<p>Nesta categoria inserem-se os projectos que tenham impacto no dia-a-dia das pessoas, os quais poderão estar relacionados com os mais variados tópicos focando-se em aplicações que procurem servir ou entreter o utilizador.</p>
 								</section>
 							</div>
 							<div class="3u">
@@ -111,7 +111,7 @@
 									<header>
 										<h3>Social</h3>
 									</header>
-									<p>Os grupos que pretendam criar aplicações nesta área, terão que se focar em aplicações que corrijam, ou melhorem substancialmente, um problema existente para a população, num determinado meio.</p>
+									<p>Os grupos que pretendam criar aplicações nesta área, deverão procurar criar aplicações que corrijam, ou melhorem substancialmente, um problema existente para a população ou para a sociedade.</p>
 								</section>
 							</div>
 							<div class="3u">
@@ -120,7 +120,7 @@
 									<header>
 										<h3>Business</h3>
 									</header>
-									<p>As equipas deverão criar uma ideia de negócio que deverá ser apresentada através de uma breve análise do mercado e da concorrência, bem como do problema que irá resolver. Deverá incluir uma reflexão sobre as competências dos diferentes membros da equipa, pontos fortes e fracos e possíveis carências. De igual forma deverá ainda ser elaborado um modelo de negócio da ideia, sendo este o principal material de análise por parte do júri. Esta ideia de negócio poderá incidir sobre qualquer área do mundo real.</p>
+									<p>As equipas deverão criar e apresentar uma ideia de negócio original com elevado potencial. Deverá ser elaborado um modelo de negócio da ideia, sendo este o principal material de análise por parte do júri. </p>
 								</section>
 							</div>
 						</div>
