Final text changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<header>
 										<h3>Videogames</h3>
 									</header>
-									<p>As equipas deverão criar um jogo inovador e original. Procuramos um jogo que tenha um bom design, uma boa inteligência artificial, boa fluidez e, claro, que seja uma boa fonte de entretenimento.</p>
+									<p>As equipas deverão criar um videojogo que seja acima de tudo a melhor experiência de entretenimento possível para o jogador, destacando-se pela inovação e criatividade. Procuramos um jogo que tenha um bom design, mecânica, fluidez, lógica e claro, uma boa dose de criatividade.</p>
 								</section>
 							</div>
 							<div class="3u">
