Prizes text update

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 									<header>
 										<h3>Para a competição de Lifestyle, os primeiros prémios são:</h3>
 									</header>
-									<p>Até 4 tablets*</p>
+									<p>Até 4 tablets de última geração!*</p>
 								</section>
 							</div>
 						</div>
@@ -220,7 +220,7 @@
 									<header>
 										<h3>Para a competição de Social, os prémios são:</h3>
 									</header>
-									<p>Até 4 telemóveis*</p>
+									<p>Até 4 telemóveis de última geração!*</p>
 								</section>
 							</div>
 						</div>
