Prizes menu item added

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<a href="#first" id="top-link" class="scrolly menuBorder">Tracks</a>
 				<!--<a href="#second" id="example-link" class="scrolly menuBorder">Datas</a>
 				<a href="#third" id="setup-link" class="scrolly menuBorder">Prémios</a>-->
-				<a href="#third" id="usage-link" class="scrolly menuBorder">Inscrição</a>
+				<a href="#third" id="usage-link" class="scrolly menuBorder">Prémios</a>
+				<a href="#fourth" id="usage-link" class="scrolly menuBorder">Inscrições</a>
 				<a href="./regulamento.pdf" target="_blank"> Regulamento</a>
 			</nav>
 		</div>
@@ -268,7 +269,7 @@
 					</div>
 				</div>
 				<header>
-					<div class="container">
+					<div id="fourth" class="container">
 						<h2>Inscrições brevemente!</h2>
 						<!--<h2>O que é que eu ganho?</h2>
 						<p>Fama, glória, experiência e reconhecimento!</p>-->
