Added Menu mobile version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/affix.js"></script>
+		<script src="js/menuMobile.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -40,6 +41,15 @@
 				<a href="#fourth" id="usage-link" class="scrolly menuBorder">Inscrições</a>
 				<a href="./regulamento.pdf" target="_blank"> Regulamento</a>
 			</nav>
+			<div class="MobileMenuIcon"><img src="images/menuSmall.png" width="28px" height="28px" style="margin-top: 10px; margin-right: 10px;"></div>
+			<div class="MobileMenu">	
+				<div class="MobileMenuContainer">
+					<div><a href="#first" class="scrolly">Tracks</a></div>
+					<div><a href="#third" class="scrolly">Prémios</a></div>
+					<div><a href="#fourth" class="scrolly">Inscrições</a></div>
+					<div><a href="./regulamento.pdf" target="_blank"> Regulamento</a></div>
+				</div>
+			</div>
 		</div>
 
 
