--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 					<img id="logoBanner" src="images/logobanner.png">
 					<p>O Innovation Awards é um concurso anual organizado pela <a href="http://sinfo.org/">SINFO</a>, que tem como objectivo incentivar e estimular a criatividade, empreendedorismo e espírito inovador dos estudantes universitários.</p>
 				</header>
+
+
 				<footer>
 					<a href="#first" class="button scrolly">Quero saber mais!</a>
 				</footer>
@@ -252,7 +254,7 @@
 							</div>
 						</div>
 
-						<span style="line-height:100px; margin-bottom:0px;">(*) O número de gadgets atribuídos é de uma unidade por elemento do grupo, sendo o máximo de quatro por equipa</span>
+						<div style="margin-top: 20px; margin-bottom: 0px"><span>(*) O número de gadgets atribuídos é de uma unidade por elemento do grupo, sendo o máximo de quatro por equipa.</span></div>
 
 						<!--<div class="row">
 							<div class="2u" style="text-align:center;">
