Updated increased the number of people allowed register

--- a/index.html
+++ b/index.html
@@ -359,6 +359,11 @@
 													<option value="2" name="2">Dois Elementos</option>
 													<option value="3" name="3">Três Elementos</option>
 													<option value="4" name="4">Quatro Elementos</option>
+													<option value="5" name="4">Cinco Elementos</option>
+													<option value="6" name="4">Seis Elementos</option>
+													<option value="7" name="4">Sete Elementos</option>
+													<option value="8" name="4">Oito Elementos</option>
+													<option value="9" name="4">Nove Elementos</option>
 												</select>
 											</div>
 										</div>
@@ -401,10 +406,65 @@
 											</div>
 											<br>
 											<div id="element4" class="row half">
-												<h2>Último Elemento</h2>
+												<h2>Quarto Elemento</h2>
 												<div class="row">
 													<div class="6u"><input type="text" class="text" id="name4" name="name4" placeholder="Nome" /><span id="ErrorName4"></span></div>
 													<div class="6u"><input type="text" class="text" id="email4" name="email4" placeholder="Email" /><span id="ErrorEmail4"></span></div>
+												<!--<div class="row row2">
+													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
+													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
+												</div>-->
+												</div>
+											</div>
+											<div id="element5" class="row half">
+												<h2>Quinto Elemento</h2>
+												<div class="row">
+													<div class="6u"><input type="text" class="text" id="name5" name="name5" placeholder="Nome" /><span id="ErrorName5"></span></div>
+													<div class="6u"><input type="text" class="text" id="email5" name="email5" placeholder="Email" /><span id="ErrorEmail5"></span></div>
+												<!--<div class="row row2">
+													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
+													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
+												</div>-->
+												</div>
+											</div>
+											<div id="element6" class="row half">
+												<h2>Sexto Elemento</h2>
+												<div class="row">
+													<div class="6u"><input type="text" class="text" id="name6" name="name6" placeholder="Nome" /><span id="ErrorName6"></span></div>
+													<div class="6u"><input type="text" class="text" id="email6" name="email6" placeholder="Email" /><span id="ErrorEmail6"></span></div>
+												<!--<div class="row row2">
+													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
+													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
+												</div>-->
+												</div>
+											</div>
+											<div id="element7" class="row half">
+												<h2>Setimo Elemento</h2>
+												<div class="row">
+													<div class="6u"><input type="text" class="text" id="name7" name="name6" placeholder="Nome" /><span id="ErrorName7"></span></div>
+													<div class="6u"><input type="text" class="text" id="email7" name="email7" placeholder="Email" /><span id="ErrorEmail7"></span></div>
+												<!--<div class="row row2">
+													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
+													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
+												</div>-->
+												</div>
+											</div>
+											<div id="element8" class="row half">
+												<h2>Oitavo Elemento</h2>
+												<div class="row">
+													<div class="6u"><input type="text" class="text" id="name8" name="name8" placeholder="Nome" /><span id="ErrorName8"></span></div>
+													<div class="6u"><input type="text" class="text" id="email8" name="email8" placeholder="Email" /><span id="ErrorEmail8"></span></div>
+												<!--<div class="row row2">
+													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
+													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
+												</div>-->
+												</div>
+											</div>
+											<div id="element9" class="row half">
+												<h2>Nono Elemento</h2>
+												<div class="row">
+													<div class="6u"><input type="text" class="text" id="name9" name="name9" placeholder="Nome" /><span id="ErrorName9"></span></div>
+													<div class="6u"><input type="text" class="text" id="email9" name="email9" placeholder="Email" /><span id="ErrorEmail9"></span></div>
 												<!--<div class="row row2">
 													<div class="6u"><input type="text" class="text" id="cellphone4" name="cellphone4" placeholder="Telemóvel"/></div>
 													<div class="6u"><input type="text" class="text" id="institution4" name="institution4" placeholder="Instituição" /></div>
@@ -451,21 +511,7 @@
 										<span id="ErrorUploadProjecto"></span>
 										<h6 class="12u" id="ProjectoRec">O ficheiro deve ter o formato <span id="RightFileName">CATEGORIA_NOME_DA_EQUIPA.zip </span>e não deve exceder os 100mb</h6>
 										<!--<input id="projectLink" type="text" class="text" name="projectLink" placeholder="Link para o ficheiro" />-->
-									</div>
-									<div class="12u">
-										<h2>Upload Declaração</h2>
-										<div class="12u" id="UploadDeclaracao">
-											<input type="file" name="fileToUploadDoc" id="fileToUploadDoc" onchange="fileSelectedDoc();"/>
-											<div class="12u FileInfo FileInfo2">
-												<div class="9u" id="DocfileName"></div>
-    										<div class="3u" id="DocfileType"></div>
-    										<div class="12u" class="UpladFile" id="UploadFileDoc"></div>
-											</div>
-										</div>
-										<span id="ErrorUploadDeclaracao"></span>
-										<h6 class="12u" id="ProjectoRec">O ficheiro deve ter o formato <span id="RightDocName">CATEGORIA_NOME_DA_EQUIPA.pdf </span></h6>
-										<!--<input id="projectLink" type="text" class="text" name="projectLink" placeholder="Link para o ficheiro" />-->
-									</div>					
+									</div>		
 								</div>
 							</div>
 							<br>
